--- a/assets/styles.css
+++ b/assets/styles.css
@@ -43,19 +43,34 @@ dl, .button{
 } */
 
 .button {
+  align-self: flex-end;
   border: none;
   color: white;
   padding: 10px 25px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
+  display: flex;
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 12px;
-  align-self: flex-end;
   filter: drop-shadow(0px 3px 5px rgba(0, 36, 32, 0.3));
+  white-space: pre;
 }
 
 .button1 {background-color: #009688;} /* Green */
 .button2 {background-color: #008CBA;} /* Blue */
+
+
+@media screen and (max-width: 600px) {
+  .card{
+    flex-direction: column !important;
+    align-items: flex-start;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .button{
+    align-self: center;
+  }
+}
