--- a/assets/styles.css
+++ b/assets/styles.css
@@ -4,73 +4,38 @@
 }
 
 .card{ 
-    overflow: hidden;
-    position: relative;
     padding-block: 1rem;
-    padding-inline: 2rem;
+    padding-inline: 1rem;
     margin-bottom: 1rem;
     border-radius: 8px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    filter: drop-shadow(0px 3px 5px rgba(0, 0, 0, 0.3));
+    gap: 1rem;
+    background-color: #1a242f;
 }
 
-dl, .button{
-    z-index: 1;
+
+span{
+  font-size: small;
 }
 
-.cover{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    inset: 0;
-    object-fit: cover;
-    z-index: -1;
+.poster{
+  border-radius: 8px;
+  max-width: 100px !important;
+  max-height: 125px !important;
 }
 
-.card::before{
-    content: '';
-    position: absolute;
-    inset: 0;
-    background: rgb(0,0,0);
-    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.9192051820728291) 37%, rgba(0,0,0,0.6979166666666667) 59%, rgba(0,0,0,0.40379901960784315) 82%, rgba(0,0,0,0) 100%);
+ul{
+  list-style: none;
+  margin-block: 0px !important;
+  padding-inline: 0px !important;
 }
 
-/* button{
-    margin: 0 !important;
-    align-self: flex-end;
-} */
-
-.button {
-  align-self: flex-end;
-  border: none;
-  color: white;
-  padding: 10px 25px;
-  text-align: center;
-  text-decoration: none;
-  display: flex;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  border-radius: 12px;
-  filter: drop-shadow(0px 3px 5px rgba(0, 36, 32, 0.3));
-  white-space: pre;
-}
-
-.button1 {background-color: #009688;} /* Green */
-.button2 {background-color: #008CBA;} /* Blue */
-
-
-@media screen and (max-width: 600px) {
+@media  (max-width: 360px){
   .card{
-    flex-direction: column !important;
+    display: flex;
+    flex-direction: column;
     align-items: flex-start;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .button{
-    align-self: center;
+    
   }
 }
